added additional token rule tests